# fedimqt

./: CMakeLists.txt  HelloModel.qml  QmlCppBridge.cpp  QmlCppBridge.h  main.qml  main.ts  mainc.c  maincxx.cpp  mainwindow.ui  makeapk.sh  myitemdg.cpp  myitemdg.h  myview.cpp  myview.h  readme.md  runit.sh  vlistview.cpp  vlistview.h  vlistview.ui
adjava/: AndroidManifest.xml
adjava/src/: helloqt.java
qmlpp/: Dmymix.js  Dmymix.qml  ItemCache.qml  MsgText.qml  MyButton.qml  MyComboBox.qml  MyImage.qml  MyLabel.qml  MySingleton.qml  MySingletonui.qml  MyText.qml  Qmlpp.js  Qmlpp.qml  Qmlpp.ts  Qmlppx.js  ToastDemo.qml  Tspp.ts  index.d.ts  qmldir
snipui/: snippets.qml  snippets.qml.bak
srcc/: aboutui.cpp  aboutui.h  mainglob.cpp  mainwindow.cpp  mainwindow.h  messageitemnt.cpp  messageitemnt.h  modelbase.cpp  modelbase.h  qtuninline.cpp  qtuninline.h
srcgo/: aboutui.go  go.mod  go.sum  main.go  main1.go  mainui.go  misscall.go  qmlapp.go  qmlcalljs.go  sharestate.go  uiappcb.go  util.go
srcui/: Aboutui.qml  CompTmpl.qml  HelloModel.qml  Loginui.qml  Logui.qml  Mainuimob.qml  MsgListView.qml  MsgText.qml  MyButton.qml  MyImage.qml  MySingleton.qml  MySingletonui.qml  MyText.qml  RoomListView.qml  Settingui.qml  ShareState.qml  Sss.qml  qmldir
